[workspace]
members = [
    "crates/runner-sdk",
    "crates/runner-common",
    "crates/runner-worker",
    "crates/runner-listener",
    "crates/runner-plugins",
    "crates/runner-plugin-host",
]
resolver = "2"

[workspace.package]
version = "2.332.0"
edition = "2021"
authors = ["GitHub"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "stream"] }
url = { version = "2", features = ["serde"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Crypto
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
rsa = { version = "0.9", features = ["pem"] }
jsonwebtoken = "9"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# File system
tempfile = "3"
walkdir = "2"
glob = "0.3"

# OS interaction
which = "7"
nix = { version = "0.29", features = ["signal", "process", "fs", "term"] }
sysinfo = "0.32"

# Channels / concurrency
crossbeam-channel = "0.5"
dashmap = "6"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# YAML
yaml-rust2 = "0.9"

# Zip / tar
flate2 = "1"
tar = "0.4"
zip = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Misc
once_cell = "1"
parking_lot = "0.12"
rand = "0.8"
bytes = "1"
hex = "0.4"
percent-encoding = "2"
async-trait = "0.1"
ctrlc = { version = "3", features = ["termination"] }
