[package]
name = "runner-plugins"
description = "GitHub Actions Runner Plugins - artifact and repository plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
runner-sdk = { path = "../runner-sdk" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
percent-encoding = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
