[package]
name = "runner-worker"
description = "GitHub Actions Runner Worker - job and step execution engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "Runner_Worker"
path = "src/main.rs"

[dependencies]
runner-sdk = { path = "../runner-sdk" }
runner-common = { path = "../runner-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
hostname = "0.4"
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
clap = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
